# power-stats

./: .gitignore  README-zh_CN.md  components.d.ts  package.json  pnpm-lock.yaml  vite.config.ts
src/: App.tsx  App.vue  main.ts  store.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs  model.rs
src/components/: FigureZone.css  FigureZone.tsx  FigureZone.vue  MainForm.tsx  MainForm.vue  SettingsForm.tsx  SettingsForm.vue  SettingsPage.vue  SettingsSlice.ts
src/stores/: settings.ts
