[package]
name = "power-stats"
version = "1.0.0"
description = "A power statistic app"
authors = ["Bruce Kang <brucekangcn@gmail.com>"]
license = "MIT"
edition = "2021"
repository = "https://github.com/BruceKangCN/power-stats"

[profile.release]
lto = true
strip = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "dialog-all", "fs-all", "window-all", "shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
csv = "1"
charset-normalizer-rs = "1"
chrono = "0.4"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
